# MockTxns

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.cache/clangd/index/: account.hpp.765480664602AF4E.idx  accounts.hpp.6B24F3B34ED2AF51.idx  archetypes.hpp.87243FB8FAFE0398.idx  behavior.hpp.D26593E182D9A2AC.idx  beta.hpp.EF1E2ADA6B0A4A8C.idx  binomial.hpp.56AB0928AA61342B.idx  blake2b.cpp.6ECBC8E698BA1D4C.idx  blake2b.hpp.6BEA2DCA8E7AF5EC.idx  calendar.cpp.780F2367ACDFADA5.idx  calendar.hpp.9394259AB13C7037.idx  cdf.hpp.238E76A51464147A.idx  checks.hpp.A543B471D059F013.idx  class.hpp.B31285B8B05DBC1B.idx  combine.hpp.F3C3C8DA1F902B5A.idx  constants.hpp.6156775D305F08E9.idx  device.hpp.A68A8BD33A279BF4.idx  draft.hpp.8F69D10561D8BAA7.idx  event.hpp.31546CBC65409676.idx  external.hpp.19AE04BFFE3ECB53.idx  factory.hpp.A4DF3DAFC82B4AD3.idx  factory.hpp.A7F9AAB1273CD0C6.idx  format.hpp.4B38D0AFE94B7877.idx  gamma.hpp.FD5ED20054FB6F3A.idx  government.cpp.C806C8AA7BED7E6D.idx  government.hpp.8AC331D7A3C2EA8B.idx  helpers.hpp.ADE984844B9FBFE8.idx  identity.hpp.BBD4F8652FA81083.idx  installment_terms.hpp.03569F719CEAF6A5.idx  insurance.cpp.E7CBADF1CAAD0D17.idx  insurance.hpp.79D0559DDDABB245.idx  insurance.hpp.AFAECED6A6E60E70.idx  insurance_ledger.hpp.5C8E87FBBBC57426.idx  ipv4.hpp.1D17563DE55D6815.idx  key.hpp.DF1A0F1522B6D789.idx  landlord.hpp.2C889FDBD16752DC.idx  layout.hpp.D63D8B263FDE2C34.idx  ledger.cpp.FE342352A2C41126.idx  ledger.hpp.9FFB45F255021EF9.idx  liquidity.hpp.C1B561FA57D4B7A8.idx  loan_terms_ledger.hpp.68C18E1E88F1F549.idx  (+47 more)
common/: business_accounts.py  channels.py  config.py  date_math.py  externals.py  family_accounts.py  ids.py  progress.py  run.py  schema.py
common/config/: world.py
common/config/population/: family.py  insurance.py  merchants.py  totals.py
common/config/simulation/: events.py
common/math/: probability.py
entities/: accounts.py  counterparties.py  credit_cards.py  merchants.py  models.py
entities/products/: auto_loan.py  builder.py  mortgage.py  portfolio.py  student_loan.py  tax_profile.py
export/: registry.py
export/aml/: __init__.py  minhash.py
export/mule_ml/: __init__.py  canonical.py  identity.py  party.py
export/standard/: __init__.py  external_accounts.py  merchants.py  tables.py
include/phantomledger/clearing/: balance_book.hpp  ledger.hpp  screening.hpp
include/phantomledger/entities/: accounts.hpp  behaviors.hpp  cards.hpp  counterparties.hpp  identifiers.hpp  identity.hpp  landlords.hpp  merchants.hpp  people.hpp  pii.hpp
include/phantomledger/inflows/: rent.hpp  salary.hpp  selection.hpp  types.hpp
include/phantomledger/infra/: router.hpp  shared.hpp
include/phantomledger/math/: amounts.hpp  counts.hpp  dormancy.hpp  evolution.hpp  momentus.hpp  paycheck.hpp  seasonal.hpp  timing.hpp
include/phantomledger/pipeline/: simulate.hpp  state.hpp
include/phantomledger/recurring/: employment.hpp  growth.hpp  lease.hpp  payroll.hpp  policy.hpp  rent.hpp
include/phantomledger/taxonomies/: enums.hpp  lookup.hpp
include/phantomledger/transactions/: draft.hpp  factory.hpp  record.hpp
include/phantomledger/transfers/: government.hpp  helpers.hpp  insurance.hpp  obligations.hpp
math_models/: amount_model.py  amounts.py  graph.py  seasonal.py  timing.py
pipeline/: generate_ledger.py  invariants.py  stages.py  state.py
pipeline/stages/: entities.py  output_tables.py  requests.py  summary.py  transfers.py
relationships/: family.py  recurring.py  social.py
relationships/recurring/: __init__.py  employment.py  payroll.py  policy.py  state.py
src/: main.cpp
src/clearing/: ledger.cpp
src/entropy/crypto/: blake2b.cpp
src/entropy/random/: rng.cpp
src/exporter/standard/: export.cpp
src/pipeline/: simulate.cpp
src/pipeline/stages/: entities.cpp  infra.cpp  transfers.cpp
src/primitives/time/: almanac.cpp  calendar.cpp  window_calendar.cpp
src/relationships/family/: builder.cpp  links.cpp  partition.cpp  support.cpp
src/spending/actors/: day.cpp
src/spending/market/: bootstrap.cpp
src/spending/routing/: payments.cpp
src/spending/simulator/: day.cpp  day_source.cpp  driver.cpp  loop.cpp  run.cpp  spender_emission_driver.cpp
src/spending/spenders/: prepare.cpp  targets.cpp
src/transactions/clearing/: ledger.cpp  loc_accrual.cpp
src/transfers/: government.cpp  insurance.cpp  obligations.cpp
src/transfers/credit_cards/: cycle.cpp  dispute.cpp  lifecycle.cpp  payment.cpp  session.cpp  statement.cpp
src/transfers/fraud/: injector.cpp
src/transfers/government/: disability.cpp  retirement.cpp
src/transfers/insurance/: claims.cpp  premiums.cpp
src/transfers/obligations/: schedule.cpp
src/transfers/subscriptions/: debits.cpp
tests/: CMakeLists.txt  test_calendar.cpp  test_channels.cpp  test_pipeline_e2e.cpp  test_spending.cpp  test_validate.cpp
transfers/: aggregate.py  balances.py  day_to_day.py  family_transfers.py  fraud.py  insurance.py  legit.py  obligations.py  screening.py
transfers/credit_cards/: generator.py  statement.py
transfers/day_to_day/: __init__.py  actors.py  bootstrap.py  channels.py  engine.py  environment.py  generate.py  merchant.py  payments.py  state.py
transfers/day_to_day/dynamics/: __init__.py  config.py  daily.py  dormancy.py  momentum.py  monthly.py  paycheck.py  person.py  population.py
transfers/day_to_day/simulator/: __init__.py  calendar.py  day.py  driver.py  liquidity.py  routing.py  run.py  spenders.py  sync.py  targets.py
transfers/family/: allowances.py  gifts.py  helpers.py  inheritance.py  siblings.py  spouse.py  support.py
transfers/fraud/: camouflage.py
transfers/legit/: __init__.py  accumulator.py  atm.py  balances.py  builder.py  credit_card_lifecycle.py  daily_transfers.py  models.py  nonpayroll_income.py  plans.py  recurring.py  self.py  subscriptions.py
transfers/legit/blueprints/: __init__.py  models.py  plans.py
transfers/legit/inflows/: __init__.py  fixed.py  revenue.py
transfers/legit/ledger/: __init__.py  builder.py  burdens.py  limits.py  passes.py  posting.py  screenbook.py  streams.py
(+229 files in other folders)
